--- a/conferences.html
+++ b/conferences.html
@@ -66,24 +66,23 @@
 		<div class = "row conference-element">
         
             <div class = "col-12 col-sm-12 col-md-6 conf-logo-box">
-            <img src="konferencialogo.jpg" class="img conf-logo">
+            <img src="konferencialogo1.jpg" class="img conf-logo">
             </div>
             <div class = "col-sm-12 col-md-6">
-            <h6> FDI workshop of the Hungarian Academy of Sciences
-21 November 2018</h6>
-            <a href="Szasz-et-al-2018-MNC-vs-local-best-practices-MTA.pdf" target="_blank">Link to PDF</a>
+            <h6> 26th EurOMA Conference <br>17th-19th June 2019</h6>
+            <a href="http://euroma2019.org/programme/" target="_blank">Link to program</a>
             </div>
         </div>
 		
 		        <div class = "row conference-element">
         
             <div class = "col-12 col-sm-12 col-md-6 conf-logo-box">
-            <img src="konferencialogo.jpg" class="img conf-logo">
+            <img src="konferencialogo2.jpg" class="img conf-logo">
             </div>
             <div class = "col-sm-12 col-md-6">
-            <h6> FDI workshop of the Hungarian Academy of Sciences
-21 November 2018</h6>
-            <a href="Szasz-et-al-2018-MNC-vs-local-best-practices-MTA.pdf" target="_blank">Link to PDF</a>
+            <h6> 4th International Conference on Economics and Business Management<br>
+23 November 2019</h6>
+            <a href="https://econ.ubbcluj.ro/icebm/program.php" target="_blank">Link to program</a>
             </div>
         </div>
 
