--- a/conferences.html
+++ b/conferences.html
@@ -69,12 +69,12 @@
             <img src="konferencialogo1.jpg" class="img conf-logo">
             </div>
             <div class = "col-sm-12 col-md-6">
-            <h6> 26th EurOMA Conference <br>17th-19th June 2019</h6>
+            <h6> 26th EurOMA Conference <br>17-19 June 2019</h6>
             <a href="http://euroma2019.org/programme/" target="_blank">Link to program</a>
             </div>
         </div>
 		
-		        <div class = "row conference-element">
+		<div class = "row conference-element">
         
             <div class = "col-12 col-sm-12 col-md-6 conf-logo-box">
             <img src="konferencialogo2.jpg" class="img conf-logo">
@@ -83,6 +83,18 @@
             <h6> 4th International Conference on Economics and Business Management<br>
 23 November 2019</h6>
             <a href="https://econ.ubbcluj.ro/icebm/program.php" target="_blank">Link to program</a>
+            </div>
+        </div>
+		
+		<div class = "row conference-element">
+        
+            <div class = "col-12 col-sm-12 col-md-6 conf-logo-box">
+            <img src="konferencialogo2.jpg" class="img conf-logo">
+            </div>
+            <div class = "col-sm-12 col-md-6">
+            <h6> 1st International Conference on the Automotive Industry <br>
+31 August - 1 September 2020</h6>
+            <a href="http://www.krtk.mta.hu/news/1st-International-Conference-on-the-Automotive-Industry-31st-of-August-1st-of-September-2020/482/" target="_blank">Link to program</a>
             </div>
         </div>
 
