--- a/conferences.html
+++ b/conferences.html
@@ -89,7 +89,7 @@
 		<div class = "row conference-element">
         
             <div class = "col-12 col-sm-12 col-md-6 conf-logo-box">
-            <img src="konferencialogo2.jpg" class="img conf-logo">
+            <img src="krtk_logo.png" class="img conf-logo">
             </div>
             <div class = "col-sm-12 col-md-6">
             <h6> 1st International Conference on the Automotive Industry <br>
